--- a/style.css
+++ b/style.css
@@ -79,3 +79,12 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
+
+.albuns_link a{
+    text-decoration: none;
+    color: var(--branco-principal);
+}
+
+.albuns_link a:hover{
+    color: #ff85a1;
+}
